--- a/public/css/sty.css
+++ b/public/css/sty.css
@@ -1,7 +1,7 @@
 body, html {
     height: 100%;
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(to top, #7a1a20 0%, #fece44 100%);
+    background: linear-gradient(to top, #371a7a 0%, #44a4fe 100%);
     display: flex;
     justify-content: center;
     align-items: center;
